--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: updating PYTHONPATH
       run: |
-        echo "PYTHONPATH=pinkhat-pac" >> $GITHUB_ENV
+        echo "PYTHONPATH=/home/runner/work/pinkhat-pac/pinkhat-pac/src/" >> $GITHUB_ENV
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
