pinkhat-21 Added policy to verify backup retention policy

--- a/pinkhat/iacparsers/policies/terraform_aws/rds/terraform_aws_db_instance.yaml
+++ b/pinkhat/iacparsers/policies/terraform_aws/rds/terraform_aws_db_instance.yaml
@@ -40,3 +40,19 @@ policies:
             publicly_accessible = false
           }
         statement: "this.object.get('publicly_accessible', false) is false"
+      - name: "Backup retention policy"
+        link: "aws_db_instance"
+        description: >
+          Data recovery is a key aspect for the application availability.
+          Backup retention period in aws_db_instance defines for how long backup is stored.
+          The value is between 0 and 35 days. You can find more information in the link below:
+
+          https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/db_instance#backup_retention_period
+        remediation: >
+          Create a backup retention policy for aws_db_instance greater than 0
+
+          resource "aws_db_instance" "db_instance_name" {
+            ...
+            backup_retention_period = 1
+          }
+        statement: "this.object.get('backup_retention_period', 0) > 1"
