#57 Checking new permission set

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,8 +10,8 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read
-  actions: read
+  contents: write
+  actions: write
   checks: write
 
 
