#57 Removed unneeded permissions

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,11 +10,8 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: write
-  actions: write
-  checks: write
+  contents: read
   pull-requests: write
-
 
 jobs:
   build:
