--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 pyyaml~=6.0.1
 loguru~=0.7.2
-python-hcl2
+python-hcl2~=4.3.4
 pytest==8.0.0
 pytest-cov==4.1.0
 msgspec~=0.18.6
-jinja2
-cryptography
+jinja2~=3.1.4
+cryptography~=42.0.8
 kuzu==0.6.0
 pegen==0.3.0
+pandas~=2.2.2
+numpy~=1.26.4
+lark~=1.1.9
